--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,3 +1,3 @@
 <footer class="footer">
-  <img src="{{ .Site.Params.signatureURL | relURL }}" alt="signature image" class="signature"/>
+    <!-- <img src="{{ .Site.Params.darkSignatureURL | relURL }}" alt="signature image" class="signature"/> -->
 </footer>
